fixed IE font size problem and increased readability of tables a bit
git-svn-id: https://svn.midgard-project.org/midgard/trunk/midcom@15729 62f49d1c-1c16-0410-9156-d311ce72abac

--- a/midgard.admin.asgard/static/screen.css
+++ b/midgard.admin.asgard/static/screen.css
@@ -8,10 +8,14 @@ body
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Verdana', 'Arial', 'Helvetica', sans-serif;
-  font-size: 10pt;
   background-color: white;
   color: black;
+}
+
+body, td
+{
+  font-family: 'Verdana', 'Arial', 'Helvetica', sans-serif;
+  font-size: 10pt;
 }
 
 textarea
